[CUPS] Fix a typo error of the fake printer's protocol.

The typo caused "Assertion error" when viewing details of a CUPS printer.

BUG=657672

Review-Url: https://codereview.chromium.org/2450653003
Cr-Commit-Position: refs/heads/master@{#427522}

Former-commit-id: 5ccb4774cad17a028967e67b49a62a96d1f7af0f