chromeos/printing/fake_printer_discoverer.cc
@@ -67,7 +67,7 @@ FakePrinterDiscoverer::FakePrinterDiscoverer()
     printers_[i].set_manufacturer("Chromium");
     printers_[i].set_model(i % 3 == 0 ? "Inkjet" : "Laser Maker");
     printers_[i].set_uri(
-        base::StringPrintf("lpr://192.168.1.%d:9100/bldg/printer", i));
+        base::StringPrintf("lpd://192.168.1.%d:9100/bldg/printer", i));
     printers_[i].set_uuid(
         base::StringPrintf("UUID-%4d-%4d-%4d-UUID", i * 3, i * 2, i));
   }
